[project]
name = "lewm-locomotion"
version = "0.1.0"
description = "Small dm_control locomotion baselines."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dm-control>=1.0.34",
    "einops>=0.8.0",
    "gymnasium>=0.29",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=1.26.0",
    "stable-baselines3>=2.3",
    "torch>=2.2.0",
    "tqdm>=4.67.0",
    "transformers>=4.41.0",
]

[tool.uv]
package = false
